# k8s-python

./: Makefile  README.md
.github/workflows/: docker-publish.yml  helm-publish.yaml  helmnew-publish.yaml
chart/: k8s-python-values.yaml
chart/k8s-python/: Chart.yaml  values.yaml
chart/k8s-python/configs/: config.yaml
chart/k8s-python/templates/: _helpers.yaml  authorizationpolicy.yaml  configmap.yaml  deployment.yaml  hpa.yaml  job-schema.yaml  requestauthorization.yaml  service.yaml  serviceaccount.yaml
container/: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  pytest.ini  setup.cfg
container/k8spython/: __init__.py  chroma.py  config.py  keys.py  models.py  tools.py  utils.py
container/k8spython/hams/: __init__.py  config.py
container/k8spython/service/: __init__.py  state.py  web.py
container/tests/: test_pies.py
container/tests/test_data/: config.yaml
container/tests/test_data/sampletext/: note000.txt  note001.txt  note002.txt  note003.txt  note004.txt
