
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "k8spython"
version = "0.3.0"
description = "Sample python with k8s"
authors = ["Ben Greene <BenJGreene@gmail.com>"]
readme = "README.md"
license = "GPL3"
repository = "https://github.com/PolecatWorks/k8s-python"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8"
# "ruamel.yaml" = "^0.17.21"
pydantic-yaml = "^1.3"
aiohttp = "^3"
sentence-transformers = "^3.2"
chromadb = "0.5.5"
pydantic-settings = "^2.6"
pydantic-file-secrets = "^0.3.0"

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1"
pytest = "^8"
Sphinx = "^8"
sphinx-autodoc-typehints = "^1.19.2"
pytest-sphinx = "^0.6"
flake8 = "^7.1.1"
flake8-black = "^0.3.6"
pylint = "^3.3.1"
sphinx-click = "^4.3.0"
pytest-click = "^1.1.0"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1"
pytest-watch = "^4.2.0"



[tool.poetry.scripts]
k8s-python = "k8spython.tools:cli"
